fix: commented out code to put up for discussion - commented out code is responsible for a jump in the layout betweern 767px and 600px

--- a/style/summary_login/login_responsive.css
+++ b/style/summary_login/login_responsive.css
@@ -45,7 +45,7 @@
     }
 }
 
-@media (max-width: 768px) {
+/* @media (max-width: 768px) {
     .login-container {
         width: 100%;
         max-width: 100%;
@@ -62,7 +62,7 @@
     .login-logo-section {
         min-height: 114px;
     }
-}
+} */
 
 @media (max-width: 600px) {
     .login-header {
